overflow corrected

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,12 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 #root {
   width: 100vw;
   height: 100vh;
-}
-
-body {
-  margin: 0;
 }
